--- a/index2.html
+++ b/index2.html
@@ -9,48 +9,63 @@
   <title>My Digital Resume</title>
 </head>
 <body>
+  
   <Header>
-    <div class="profile-image"><img src="https://github.com/SinaBoby/HYF-Module-HTMLCSSGIT/blob/main/Week1/sina.jpg" alt="My-Photo">
-    </div>
+    
+    <div class="container">
+      <div class="header-inner">
    <div class="Name"> <h1>Sina Gholipour</h1>
     <p>Future Web Developer</p></div>
     <div class="main-info"><ul>
-      <em><li>City: Amsterdam</li>
+      <li>City: Amsterdam</li>
       <li>Phone: +3161234567</li>
-      <li>Email: HYF@yahoo.com</li></em>
+      <li>Email: HYF@yahoo.com</li>
     </ul></div>
-    </Header>
+  </div></div>
+</Header>
   <div class="container">
-    <main>
-    <h2>About Me</h2>
-    <hr>
-    <p>I'm an old fan of Physics & Mathematics who has studied many years in this field. Currently My passion is Coding , Web Developing & Digital markets.</p>
+  <main>
+    <article class="about">
+       <h2>About Me</h2>
+       <hr>
+      <p>I'm an old fan of Physics & Mathematics who has studied many years in this field. Currently My passion is Coding , Web Developing & Digital markets.</p>
+    </article>
+    <article class="education">  
     <h2>Education</h2>
-    <hr>
+       <hr>
     
       <h3> High School Graduated  </h3>
-      <ul><li>in Physics & Mathematics</li>   
-        <li>2009 , Tehran</li></ul><br>
+      <ul>
+        <li>in Physics & Mathematics</li>   
+        <li>2009 , Tehran</li>
+      </ul><br>
       <h3>Tehran Azad University</h3>
-      <ul><li>2011-2014 , Tehran</li>
-      <li>Bachelor in Mechanical Engineering</li></ul><br> 
+      <ul>
+        <li>2011-2014 , Tehran</li>
+        <li>Bachelor in Mechanical Engineering</li>
+      </ul><br> 
       <h3>Free University of Amsterdam</h3>
-      <ul><li>2018 - 2020 , Amsterdam</li>
+      <ul>
+        <li>2018 - 2020 , Amsterdam</li>
       <li>B2 Level in Dutch Language</li>
     </ul>
+  </article>
+  <article class="work">
     <h2>Work Experience</h2>
     <hr>
     <h3>KH Technics</h3>
-      <ul><li> Amsterdam  2017-2018 </li><br>
-      <li> Construction works like demolishing , piping & buildings Electricity </li>
-      </ul>
+    <ul>
+        <li> Amsterdam  2017-2018 </li><br>
+        <li> Construction works like demolishing , piping & buildings Electricity </li>
+    </ul>
     <h3>liquor Store Late Night</h3>
     <ul>
       <li> 2018 - 2020 , Amsterdam</li><br>
-    <li>Working as the Cashier and Sales person </li>
+      <li>Working as the Cashier and Sales person </li>
   </ul>
-
-</main>
+</article>
+</main></div>
+<div class="container">
 <aside>
   <div class="skills">
   <h2>Skills<hr></h2>
@@ -86,11 +101,8 @@
     <dd><a href="https://github.com/SinaBoby" target="-blank">Github.com/SinaBoby</a></dd>
   </b></dl>
 
-</div>
+</div></div>
 
 </aside></div>
-<footer>
-  <hr><p>This Resume Template has designed by Sina Boby , Copyright &copy; 2021 </p>
-</footer>
 </body>
 </html>
